--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,7 +12,7 @@ FROM alpine:3.17.0 as release
 WORKDIR /app
 COPY --from=build  /go/src/tasky/tasky .
 COPY --from=build  /go/src/tasky/assets ./assets
-COPY --from=build /go/src/tasky/wizexercise.txt /root/wizexercise.txt
+COPY --from=build /go/src/tasky/wizexercise.txt ./assets/wizexercise.txt
 EXPOSE 8080
 ENTRYPOINT ["/app/tasky"]
 
